# Weather-Forecaster

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  config.json
lib/include/: CityMeteoData.h  UI.h  WeatherApp.h
lib/src/: CityMeteoData.cpp  UI.cpp  WeatherApp.cpp
